Fix info value's text align in moblile page

--- a/src/public/style/shcss.css
+++ b/src/public/style/shcss.css
@@ -591,6 +591,7 @@ p {
 
 @media (max-width: 900px) {
   #info_title {
+    text-align: center;
     width: 110px;
   }
 
